--- a/src/main/resources/en.ini
+++ b/src/main/resources/en.ini
@@ -31,3 +31,4 @@ Number of same translations: %s=Number of same translations: %s
 Please select a language;=Please select a language;
 Fill in one of the following language codes:=Fill in one of the following language codes:
 Or leave empty to cancel=Or leave empty to cancel
+Open UI=Open UI
