--- a/src/main/resources/nl.ini
+++ b/src/main/resources/nl.ini
@@ -31,3 +31,4 @@ Number of same translations: %s=Aantal vertalen die hetzelfde zijn: %s
 Please select a language;=Selecteer een taal;
 Fill in one of the following language codes:=Vul een van de volgende taal codes in:
 Or leave empty to cancel=Of laat leeg om te annuleren
+Open UI=Open venster
