UI - translated to Dutch.

--- a/src/main/resources/en.ini
+++ b/src/main/resources/en.ini
@@ -32,3 +32,22 @@ Please select a language;=Please select a language;
 Fill in one of the following language codes:=Fill in one of the following language codes:
 Or leave empty to cancel=Or leave empty to cancel
 Open UI=Open UI
+
+[ui]
+Are you sure you want to exit?=Are you sure you want to exit?
+Open root folder first!=Open root folder first!
+Open root folder=Open root folder
+Root folder opened:=Root folder opened:
+Open sub folder=Open sub folder
+Sub folder opened:=Sub folder opened:
+File=File
+Save=Save
+Preferences=Preferences
+Exit=Exit
+Keys=Keys
+Source=Source
+Target=Target
+Change preferences via CLI=Change preferences via CLI
+Save? (this will overwrite existing data)=Save? (this will overwrite existing data)
+Set source language code (e.g. 'en')=Set source language code (e.g. 'en')
+Set target language code (e.g. 'nl')=Set target language code (e.g. 'nl')
