--- a/src/main/resources/nl.ini
+++ b/src/main/resources/nl.ini
@@ -18,8 +18,8 @@ File is not a directory=Bestand is geen map
 Set as root folder: %s=Ingesteld als hoofdmap: %s
 Set as sub folder: %s=Ingesteld als submap: %s
 That is not a valid letter language code %s.=Dat is geen correcte letter taal code %s.
-Please enter source language (as language letter code, e.g. 'en')=Geef de bron taal code op: (bijv: 'en')
-Please enter target language (as language letter code, e.g. 'nl')=Geef de doel taal code op: (bijv: 'nl')
+Please enter source language (as language code, e.g. 'en')=Geef de bron taal code op: (bijv: 'en')
+Please enter target language (as language code, e.g. 'nl')=Geef de doel taal code op: (bijv: 'nl')
 Please enter sub-folder (leave blank for "_fallback")=Geef de sub-folder op: (standaard: "_fallback")
 Checking for missing keys...=Controleren op ontbrekende vertalingen...
 %s strings missing in the %s strings: ='%s' vertalingen die missen in '%s':
@@ -32,3 +32,22 @@ Please select a language;=Selecteer een taal;
 Fill in one of the following language codes:=Vul een van de volgende taal codes in:
 Or leave empty to cancel=Of laat leeg om te annuleren
 Open UI=Open venster
+
+[ui]
+File=Bestand
+Are you sure you want to exit?=Weet je zeker dat je wilt afsluiten?
+Open root folder first!=Open eerst een hoofd map!
+Open root folder=Open hoofd map
+Root folder opened:=Hoofd map geopend:
+Open sub folder=Open sub map
+Sub folder opened:=Sub map geopend:
+Save=Opslaan
+Preferences=Instellingen
+Exit=Afsluiten
+Keys=Sleutels
+Source=Bron
+Target=Doel
+Change preferences via CLI=Verander instellingen via de CLI
+Save? (this will overwrite existing data)=Opslaan? (Dit overschijft bestaande data)
+Set source language code (e.g. 'en')=Bron taal code instellen (bijv. 'en')
+Set target language code (e.g. 'nl')=Doel taal code instellen (bijv. 'nl')
