UI - fixed typo.

--- a/src/main/resources/nl.ini
+++ b/src/main/resources/nl.ini
@@ -48,6 +48,6 @@ Keys=Sleutels
 Source=Bron
 Target=Doel
 Change preferences via CLI=Verander instellingen via de CLI
-Save? (this will overwrite existing data)=Opslaan? (Dit overschijft bestaande data)
+Save? (this will overwrite existing data)=Opslaan? (Dit overschrijft bestaande data)
 Set source language code (e.g. 'en')=Bron taal code instellen (bijv. 'en')
 Set target language code (e.g. 'nl')=Doel taal code instellen (bijv. 'nl')
